[gd_scene load_steps=8 format=3 uid="uid://bmf6ctn3uuwsn"]

[ext_resource type="Script" path="res://scripts/plane.gd" id="1_h3v2c"]
[ext_resource type="SpriteFrames" uid="uid://bc81bj8rklsx8" path="res://assets/plane/plane_frames.tres" id="1_yamcm"]
[ext_resource type="AudioStream" uid="uid://b5qthjvssympj" path="res://assets/audio/engine.mp3" id="2_b5mvt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x0s4w"]
resource_local_to_scene = true
radius = 31.1448

[sub_resource type="Animation" id="Animation_lpw1w"]
length = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_od7ax"]
resource_name = "pull_up"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.349066, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jsps3"]
_data = {
"RESET": SubResource("Animation_lpw1w"),
"pull_up": SubResource("Animation_od7ax")
}

[node name="Plane" type="CharacterBody2D" groups=["Plane"]]
position = Vector2(-1, 0)
script = ExtResource("1_h3v2c")

[node name="Animation" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_yamcm")
animation = &"fly"
autoplay = "fly"
frame_progress = 0.609407

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(6, 0)
shape = SubResource("CircleShape2D_x0s4w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jsps3")
}

[node name="EngineSound" type="AudioStreamPlayer2D" parent="." groups=["Plane"]]
stream = ExtResource("2_b5mvt")
autoplay = true
parameters/looping = true

[node name="SoundTImer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="SoundTImer" to="." method="_on_timer_timeout"]
